fix: javafx.collections unnamed exports (#1)